--- a/licensemanager/src/main/resources/application.properties
+++ b/licensemanager/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/KeyMan
 spring.datasource.username= postgres
 spring.datasource.password= 1234
+
+logging.level.org.springframework.security=TRACE
