--- a/licensemanager/src/main/resources/application.properties
+++ b/licensemanager/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/KeyMan
 spring.datasource.username= postgres
 spring.datasource.password= 1234
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=TRACE
