--- a/licensemanager/src/main/resources/application.properties
+++ b/licensemanager/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/KeyMan
+spring.datasource.url = jdbc:postgresql://localhost:5432/NewDB
 spring.datasource.username= postgres
-spring.datasource.password= 1234
+spring.datasource.password= 0611
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
